# StellarEscrow

./: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .eslintrc.json  .gitignore  .prettierrc  Architecture.md  COMPONENT_LIBRARY_IMPLEMENTATION.md  COMPONENT_LIBRARY_SUMMARY.md  Cargo.toml  DISASTER_RECOVERY.md  Deployment.md  GOVERNANCE_TOKEN.md  IMPLEMENTATION_COMPLETE.md  Knowledge Base.md  Operational.md  PERFORMANCE.md  PR_DESCRIPTION.md  README.md  STATE_MANAGEMENT_IMPLEMENTATION.md  TESTING.md  TODO.md  Troubleshooting.md  cdn-headers.nginx.conf  clippy.toml  docker-compose.dev.yml  docker-compose.yml  package.json  performance.nginx.conf  playwright.config.ts  ssl.nginx.conf  tsconfig.json
indexer/: .gitignore  BUILD_STATUS.md  Cargo.toml  Dockerfile  GATEWAY_IMPLEMENTATION.md  README.md  cargo_test_output.txt  cargo_test_output_utf8.txt  config.toml
indexer/migrations/: 20240101000000_initial.sql  20240102000000_files.sql  20260324000000_search_history.sql  20260324000001_fraud_detection.sql  20260325000000_audit_logs.sql  20260325000000_health_metrics.sql  20260326000000_search_analytics.sql  20260326000001_integration_deliveries.sql  20260326000002_performance_metrics.sql  20260327000000_notifications.sql  20260327000001_compliance.sql  20260327000002_analytics_cache_backup_webhooks.sql  20260328000000_bridge_support.sql  20260328000000_event_indexing_optimization.sql  20260329000000_apm_views.sql  20260329000000_users.sql  20260329000001_fulltext_search.sql  20260329000001_perf_optimization.sql
indexer/src/: auth.rs  cache.rs  config.rs  database.rs  error.rs  event_monitor.rs  file_handlers.rs  gateway.rs  gateway_test.rs  handlers.rs  health.rs  help.rs  lib.rs  main.rs  models.rs  rate_limit.rs  rate_limit_handlers.rs  storage.rs  test.rs  user_handlers.rs  websocket.rs
indexer/src/analytics_service/: aggregator.rs  export.rs  mod.rs
indexer/src/backup_service/: mod.rs  recovery.rs  verify.rs
indexer/src/bridge_service/: coordinator.rs  mod.rs  providers.rs  validator.rs
indexer/src/cache_service/: mod.rs
indexer/src/compliance_service/: aml.rs  kyc.rs  mod.rs  reporting.rs  workflow.rs
indexer/src/fraud_service/: ml.rs  mod.rs  rules.rs  test.rs
indexer/src/integration_service/: connectors.rs  mod.rs  test.rs
indexer/src/job_queue/: mod.rs  types.rs  worker.rs
indexer/src/monitoring_service/: alerts.rs  (+3 more)
mobile-sdk/: Cargo.toml
mobile-sdk/src/: error.rs  flows.rs  lib.rs  mobile_error.rs  offline_queue.rs  push_notifications.rs  signing.rs  transaction_builder.rs  types.rs  wallet.rs
(+570 files in other folders)
