[package]
name = "stellar-escrow-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-stream = "0.3"
tokio-stream = "0.1"
dashmap = "5.5"
toml = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1.0"
smartcore = { version = "0.3", features = ["serde"] }
hmac = "0.12"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

[dev-dependencies]
wiremock = "0.6"
