[package]
name = "stellar-escrow-mobile-sdk"
version = "0.1.0"
edition = "2021"
description = "Mobile SDK for StellarEscrow contract interactions"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "1"
